Controller Bug Fixes